# v2box

./: .gitignore  README.md  pyproject.toml  vless2singbox.py
v2box/: __init__.py
v2box/cli/: main.py
v2box/core/: config.example.json  config.py  link_builder.py  server_config.py  service.py  store.py  subscription.py  testing.py
v2box/parsers/: __init__.py  hysteria2.py  shadowsocks.py  socks.py  trojan.py  vless.py  vmess.py
