[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2box"
version = "0.1.0"
description = "一键将代理节点链接导入 sing-box，轻松管理、测速、切换节点"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "v2box contributors"},
]
keywords = ["sing-box", "proxy", "vless", "vmess", "trojan", "shadowsocks", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
v2box = "v2box.cli.main:cli"

[project.urls]
Homepage = "https://github.com/v2box/v2box"

[tool.setuptools.packages.find]
include = ["v2box*"]
